--- a/v1/static/admin/config.yml
+++ b/v1/static/admin/config.yml
@@ -182,6 +182,8 @@ collections: # A list of collections the CMS should be able to edit
           { name: "facebook", label: "Facebook", widget: "string", required: false }
         ]
       }
+      - { label: "Team Description", name: "body", widget: "markdown" }
+
 
   - name: "Sponsors"
     label: "Sponsors"
