--- a/v1/config.toml
+++ b/v1/config.toml
@@ -31,22 +31,28 @@ staticDir = ["static", "v1/static/"]
     weight     = 1
 
 [[menu.main]]
+    identifier = "Team"
+    name       = "Our Team"
+    url        = "/team-members/"
+    weight     = 2
+
+[[menu.main]]
     name       = "Cars"
     identifier = "cars"
     url        = "/cars/"
-    weight     = 2
+    weight     = 3
 
 [[menu.main]]
     name       = "News"
     identifier = "blog"
     url        = "/blog/"
-    weight     = 3
+    weight     = 4
 
 [[menu.main]]
     identifier = "Contact"
     name       = "Contact"
     url        = "/contact/"
-    weight     = 4
+    weight     = 5
 
 # Top bar social links menu
 
