--- a/v1/data/announcements/29-04-35-iftar.yaml
+++ b/v1/data/announcements/29-04-35-iftar.yaml
@@ -1,7 +1,7 @@
 featured: true
 title: Iftar
 date: 2024-03-29
-body: A﻿ll team alumni are invited to the iftar event next week! Stay tuned for
+body: All team alumni are invited to the iftar event next week! Stay tuned for
   more information soon
 link: https://google.com
 linkText: Coming Soon
